tests/paczka1/fuzzy1/82928437.err
Error in line 2: NF0Z A787 39,2
Error in line 20: mymkg A787 68,3
Error in line 22: NF0Z A840 -2,3
Error in line 28: NF0Z A840 413,3
Error in line 32: NF0Z A280 58,6
